2007-03-06  Bruno coudoin  <bruno.coudoin@free.fr>

	Removed erase doubleclick activity, the fish activity play this role now.
	Joshua N Pritikin improved erase activity, implements this idea:
	The erase game in NORMAL mode ignores clicks. I think it would be better to
	unerase on click. That way kids get immediate feedback about what
	action they are suppose to be doing. Otherwise they seem confused about
	whether the movement or clicking is doing something.

	* boards/Makefile.am:
	* boards/erase_double_clic.xml.in:
	* po/POTFILES.in:
	* src/boards/erase.c: (start_board), (end_board), (set_level),
	(get_num_layers), (erase_next_level), (erase_destroy_all_items),
	(add_one_item), (erase_create_item), (game_won), (erase_one_item),
	(item_event), (canvas_event), (shuffle_image_list):

2007-03-06  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/hanoi_real.c: (hanoi_create_item): realigned title background
	* src/boards/python/admin/Makefile.am: added missing  log module
	* src/boards/reading.c: (display_what_to_do): better text color and size
	* src/boards/wordprocessor.c: minor
	* src/gcompris/gcompris.c: (gc_set_background): added and experimental --nobackimg option
	  this disable the load and display of the background image of all activities. This need to
	  be improved so that we can differentiate optional one and mandotary one.
	* src/gcompris/gcompris_db.c: (gc_db_log), (escape_quote): fixed a bug in reading and potantialy other
	  activity, missing double quoting ' in sqlite.
	* src/gcompris/log.c: (gc_log_set_comment): minor

2007-03-04  Bruno coudoin  <bruno.coudoin@free.fr>

	Added missing file. Closes bug#414240

	* po/POTFILES.in:

2007-03-01  Bruno coudoin  <bruno.coudoin@free.fr>

	Added support for Dzongkha language.

	* boards/flags/dz.png: created from wikipedia
	* boards/miscelaneous.xml.in: removed an extra space that made gettext fail.
	* src/gcompris/config.c: Added support for Dzongkha language.